@@ -11,6 +11,7 @@ VERSION 2.3.1
       Amarok. Batch scan users can invoke it with the --idlepriority flag.
 
   BUGFIXES:
+    * File browser: fixed sorting files by date. (BR 226941)
     * Fixed issue with file browser bookmarks not working when the file browser
       was showing "places".
     * Fixed crash when right clicking in file browser while it is showing 
